--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/TableViewMenuPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/TableViewMenuPage.xaml
@@ -46,10 +46,10 @@
                 <ImageButton BackgroundColor="White" Source="businesscontinuity.png" HorizontalOptions="Center" VerticalOptions="Center" Command="{Binding NewNotificationClicked}" CommandParameter="5" ></ImageButton>
             </Frame>
             <Frame Grid.Row="3" Grid.Column="0" HasShadow="True" OutlineColor="#dcdcdc" CornerRadius="10">
-                <ImageButton BackgroundColor="White" Source="businesscontinuity.png" HorizontalOptions="Center" VerticalOptions="Center" Command="{Binding NewNotificationClicked}" CommandParameter="6" ></ImageButton>
+                <ImageButton BackgroundColor="White" Source="pandemic.png" HorizontalOptions="Center" VerticalOptions="Center" Command="{Binding NewNotificationClicked}" CommandParameter="6" ></ImageButton>
             </Frame>
             <Frame Grid.Row="3" Grid.Column="1" HasShadow="True" OutlineColor="#dcdcdc" CornerRadius="10">
-                <ImageButton BackgroundColor="White" Source="businesscontinuity.png" HorizontalOptions="Center" VerticalOptions="Center" Command="{Binding NewNotificationClicked}" CommandParameter="7" ></ImageButton>
+                <ImageButton BackgroundColor="White" Source="others.png" HorizontalOptions="Center" VerticalOptions="Center" Command="{Binding NewNotificationClicked}" CommandParameter="7" ></ImageButton>
             </Frame>
         </Grid>
     </Grid>
