--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/ForgetPasswordPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/ForgetPasswordPage.xaml
@@ -55,7 +55,7 @@
                         <!-- USE YOUR CREDENTIALS TEXT -->
                         <Label
 							Text="Mail adresinizle şifrenizi sıfırlayabilirsiniz."
-							HorizontalOptions="Center"/>
+							HorizontalOptions="Center" />
                         <!--SEPARATOR-->
                         <BoxView
 							WidthRequest="100"
@@ -63,7 +63,7 @@
 							HorizontalOptions="Center"
 							VerticalOptions="End"
                             BackgroundColor="{ DynamicResource BaseTextColor }" />
-                        <Image 
+                        <Image
                         Source="tree.png"
 						HorizontalOptions="Center"
 						VerticalOptions="Center" />
@@ -98,7 +98,7 @@
 							VerticalOptions="Center"
 							HorizontalOptions="Center" />
                         <Entry
-                            x:Name="mailEntry" 
+                            x:Name="mailEntry"
                             Text="{Binding Mail}"
 							Grid.Column="1"
 							Grid.Row="0"
@@ -117,18 +117,17 @@
 						VerticalOptions="End">
                         <!-- SEND BUTTON-->
                         <Button
-						    CornerRadius="50" 
-                            FontSize="Medium" 
+						    CornerRadius="50"
+                            FontSize="Medium"
                             TextColor="White"
-                            BorderColor="Black" 
-                            BackgroundColor="#2196f3" 
-                            FlexLayout.AlignSelf="Stretch"  
+                            BorderColor="Black"
+                            BackgroundColor="#2196f3"
+                            FlexLayout.AlignSelf="Stretch"
                             HorizontalOptions="CenterAndExpand"
                             WidthRequest="350"
 							VerticalOptions="End"
-							Text="GÖNDER" 
-                            Command="{Binding SendEmailAdressButtonClicked}"
-                        />
+							Text="GÖNDER"
+                            Command="{Binding SendEmailAdressButtonClicked}" />
                     </StackLayout>
                 </Grid>
             </ScrollView>
