Deprem senaryosu icin lokasyon gosterimi kapatildi. Ve arka planda konum bilgisi alindi.

--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/NewScenarioPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/NewScenarioPage.xaml
@@ -92,7 +92,7 @@
                         VerticalOptions="Center">
                     </controls:BorderlessPicker>
                 </StackLayout>
-                <StackLayout Orientation="Horizontal">
+                <StackLayout Orientation="Horizontal" x:Name="locationLayout" IsVisible="{Binding IsVisibleLocation}">
                     <Image
                             Source="locationIcon.png"
 							VerticalOptions="Center"
