Duyuru listesinde kullanıcı ismi soyisim (birim) şeklinde geliştirildi.

--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/Templates/AnnouncementListTemplate.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/Templates/AnnouncementListTemplate.xaml
@@ -56,7 +56,7 @@
                         HorizontalOptions="FillAndExpand"
 						VerticalOptions="FillAndExpand" />
                         <Label VerticalOptions="End"
-                               Text="{Binding AnnouncementUserName}"
+                               Text="{Binding AnnouncementUserInfo}"
                                FontSize="11"></Label>
                     </StackLayout>
                 </StackLayout>
