--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/Templates/ListTemplate.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/Templates/ListTemplate.xaml
@@ -9,7 +9,7 @@
 		Orientation="Horizontal"
 		Padding="10, 5, 10, 5"
 		VerticalOptions="Center">
-            <image:CircleImage Source="camera.png"
+            <image:CircleImage Source="{Binding profilePicture}"
                                Aspect="AspectFill"
                                HorizontalOptions="Center"
                                VerticalOptions="Start"
