Internet baglantisi kontrolu duzenlendi. Etki alani bilgisi kapatildi.

--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/NewScenarioPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/NewScenarioPage.xaml
@@ -111,7 +111,7 @@
                         VerticalOptions="Center">
                     </controls:BorderlessPicker>
                 </StackLayout>
-                <StackLayout Orientation="Horizontal">
+                <StackLayout Orientation="Horizontal"  IsVisible="{Binding IsVisibleLocation}">
                     <Image
                             Source="impactAreaIcon.png"
 							VerticalOptions="Center"
