--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/Templates/ListTemplate.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/Templates/ListTemplate.xaml
@@ -2,21 +2,14 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:image="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
-             xmlns:converters="clr-namespace:Intouch.Edm.Converters"
              x:Class="Intouch.Edm.Views.Templates.ListTemplate">
-    <ContentView.Resources>
-        <ResourceDictionary>
-            <!-- register static resource of type ImageSourceConverter with name "Converter" -->
-            <converters:ImageSourceConverter x:Key="ImageConverter"></converters:ImageSourceConverter>
-        </ResourceDictionary>
-    </ContentView.Resources>
     <ContentView.Content>
         <StackLayout
 		Spacing="0"
 		Orientation="Horizontal"
 		Padding="10, 5, 10, 5"
 		VerticalOptions="Center">
-            <image:CircleImage Source="{Binding profilePicture, Converter={StaticResource ImageConverter}}"
+            <image:CircleImage Source="{Binding profilePicture}"
                                Aspect="AspectFill"
                                HorizontalOptions="Center"
                                VerticalOptions="Center"
